<resources>
    <string name="app_name" translatable="false">Events in Paris</string>
    <string name="main_title">Bienvenue sur notre application Events in Paris !</string>
    <string name="connectMessage">Veuillez cliquer sur le bouton suivant afin d\'accéder à vos favoris :</string>
    <string name="startButtonText">Commencer</string>
    <string name="appExplanation">Dans cette app, vous aurez accès à une base de données très complète listant un grand nombre d\'activités à faire à Paris.
        Après avoir appuyé sur le bouton "Commencer", vous aurez accès à différentes listes contenant les événements à Paris.</string>
    <string name="eventTitle">Titre event</string>
    <string name="leadTextString">Phrase descriptive de l\'event</string>
    <string name="descriptionEvent">Lorem ipsum dolores blablabla ca decrit l\'event blabla texte blabla c\'est long blabla ca grandit Lorem ipsum dolores blablabla ca decrit l\'event blabla texte blabla c\'est long blabla ca grandit</string>
    <string name="addressName">Nom de l\'adresse</string>
    <string name="addressStreet">Rue</string>
    <string name="addressZipCode">Code Postal</string>
    <string name="addressCity">Ville</string>
    <string name="priceDetails">Details de prix</string>
    <string name="transportIndications">Indications de transports</string>
    <string name="categoryName">Nom categorie</string>
    <string name="FavoritesButton">Favoris</string>
    <string name="FavoritesButtonEvents">Events</string>
    <string name="mainActivityTitle">Choisis ton event !</string>
    <string name="aboutUsTitle">A propos de l\'appli</string>
    <string name="recupURL">URL de récupération des données : https://events-in-paris.cleverapps.io</string>
    <string name="usedLibraries">Les principales librairies que nous avons utilisées sont les suivantes :</string>
    <string name="retrofitdescription">Retrofit : permet d\'effecuter des requêtes vers internet et donc de récupérer la base de données.</string>
    <string name="picassodescription">Picasso : permet de télécharger sur une application Android des images à partir de leur URL</string>
    <string name="developpers">Développeurs</string>
    <string name="fati" translatable="false">Fatima-Zohra NAZIH</string>
    <string name="valou" translatable="false">Valentin POLLART</string>
</resources>