<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".EventActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/eventImageView"
            android:layout_width="414dp"
            android:layout_height="278dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:fontFamily="@font/arima_madurai_bold"
            android:id="@+id/eventTitleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:paddingHorizontal="20dp"
            android:text="@string/eventTitle"
            android:textColor="@color/vividRed"
            android:textSize="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventImageView"
            app:layout_constraintVertical_bias="0.866" />

        <TextView
            android:id="@+id/eventLeadTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:text="@string/leadTextString"
            android:layout_marginBottom="20dp"
            android:textSize="22dp"
            android:fontFamily="@font/arima_madurai_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eventTitleView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/eventDescriptionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:text="@string/descriptionEvent"
            android:textColor="@color/darkRoyalBlue"
            android:textSize="12dp"
            android:fontFamily="@font/arima_madurai_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eventLeadTextView"
            app:layout_constraintVertical_bias="0.161" />

        <TextView
            android:id="@+id/dateStartView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="151dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/arima_madurai_bold"
            android:paddingHorizontal="20dp"
            android:text="Date debut"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toEndOf="@id/addressNameView"
            app:layout_constraintTop_toBottomOf="@+id/eventDescriptionView"
            app:layout_constraintVertical_bias="0.129" />

        <TextView
            android:id="@+id/dateEndView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:text="Date fin"
            android:textSize="12dp"
            android:fontFamily="@font/arima_madurai_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toEndOf="@id/dateStartView"
            app:layout_constraintTop_toBottomOf="@+id/eventDescriptionView"
            app:layout_constraintVertical_bias="0.034" />

        <TextView
            android:id="@+id/addressNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:layout_marginRight="80dp"
            android:text="@string/addressName"
            android:textSize="12dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/arima_madurai_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventDescriptionView"
            app:layout_constraintVertical_bias="0.131" />

        <TextView
            android:id="@+id/addressStreetView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:text="@string/addressStreet"
            android:textSize="12dp"
            android:fontFamily="@font/arima_madurai_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressNameView"
            app:layout_constraintVertical_bias="0.061" />

        <TextView
            android:id="@+id/addressZipCodeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:text="@string/addressZipCode"
            android:textSize="12dp"
            android:fontFamily="@font/arima_madurai_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressStreetView"
            app:layout_constraintVertical_bias="0.067" />

        <TextView
            android:id="@+id/addressCityView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:text="@string/addressCity"
            android:textSize="12dp"
            android:fontFamily="@font/arima_madurai_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toEndOf="@id/addressZipCodeView"
            app:layout_constraintTop_toBottomOf="@+id/addressNameView"
            app:layout_constraintVertical_bias="0.195"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>
</ScrollView>